# hangman-game

./: README.md  main.py  pyproject.toml
.cache/nix/: binary-cache-v6.sqlite
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/pip-22.2.1-py3-none-any/pip-22.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/setuptools-63.2.0-py3-none-any/setuptools-63.2.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/wheel-0.37.1-py2.py3-none-any/wheel-0.37.1.dist-info/: RECORD
.upm/: store.json
